- `rootProjectDescriptor` -> `projectDescriptor` - moved logic outside the `DefaultHybrisProjectDescriptor` - use PathExpand instead of the `guessProjectDir` - added modules processor - added modules scanner - added config module descriptor lookup